feat: add tailwind css

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -282,9 +282,15 @@
         document.documentElement.classList.add('shopify-design-mode');
       }
     </script>
+
+    <link rel="stylesheet" href="{{ 'tailwind.css' | asset_url }}">
+
   </head>
 
   <body class="gradient{% if settings.animations_hover_elements != 'none' %} animate--hover-{{ settings.animations_hover_elements }}{% endif %}">
+   
+    <h1 class="text-red-500">hello checkkk tailwind</h1>
+   
     <a class="skip-to-content-link button visually-hidden" href="#MainContent">
       {{ 'accessibility.skip_to_text' | t }}
     </a>
