--- a/snippets/card-collection.liquid
+++ b/snippets/card-collection.liquid
@@ -147,7 +147,7 @@
       <div class="card__content">
         <div class="card__information">
           <h3 class="card__heading card__heading--placeholder">
-            <a role="link" aria-disabled="true" class="full-unstyled-link flex items-center">
+            <a role="link" aria-disabled="true" class="full-unstyled-link tw-flex tw-items-center">
               {{ 'onboarding.collection_title' | t }}
               <span class="icon-wrap">{% render 'icon-arrow' %}</span>
             </a>
